--- a/src/global.css
+++ b/src/global.css
@@ -70,6 +70,30 @@ textarea {
   font-size: 16px;
 }
 
+@media screen and (max-width: 768px) {
+  :root {
+    font-size: 10px;
+  }
+}
+
+@media  screen and (min-width: 768px) and( max-width: 1024px) { 
+  :root {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1440px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  :root {
+    font-size: 16px;
+  }
+}
+
 @keyframes modalOpen {
   from {
     opacity: 0;
